# drone-

./: 0_check_gui_requirements.bat  1_start_system.bat  2_takeoff.bat  3_keyboard_control.bat  4_landing.bat  6_gui_teleop_en.bat  CMakeLists.txt  CORE_FILES_SUMMARY.txt  GITHUB_UPLOAD_GUIDE.txt  GUI_Manual_EN.txt  README.md  advanced_teleop_control.py  auto_upload_to_github.bat  autonomous_campus_flight.py  campus_blueprint.json  check_airsim_setup.py  check_gui_requirements.py  code_optimization_guide.md  fix_and_upload.bat  gui_teleop_control_en.py  improved_campus_training.py  never_stop_campus_tour.py  optimized_performance.py  package.xml  performance_test.py  requirements.txt  requirements_optimized.txt
DRONE/: 0_check_gui_requirements.bat  1_start_system.bat  2_takeoff.bat  3_keyboard_control.bat  4_landing.bat  6_gui_teleop_en.bat  CMakeLists.txt  CORE_FILES_SUMMARY.txt  GUI_Manual_EN.txt  README_Usage_Guide.txt  advanced_teleop_control.py  check_gui_requirements.py  gui_teleop_control_en.py  package.xml
DRONE/config/: city_demo.rviz  drone_visualization.rviz
DRONE/install/: local_setup.sh  setup.sh
DRONE/install/ppo_drone_ros2/share/ppo_drone_ros2/: package.bash  package.zsh
DRONE/launch/: city_demo.launch.py  full_system.launch.py  full_system_rviz.launch.py  ppo_mavros.launch.py  rviz_ppo_demo.launch.py  urban_gui_demo.launch.py
DRONE/maps/: README_Urban_Maps.md  create_urban_map.bat  drone_arena.pgm  drone_arena.yaml  drone_arena_preview.txt  generate_urban_map.m  generate_urban_map.py  urban_city.yaml  urban_city_preview.txt
